fixed alignment

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 h1{
     
     text-align: center;
-    
+    margin-right: 80px;
     color: #ab71b1;
 }
 
